[package]
name = "default-audio-switcher"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.19.0"
hound = "3.5.1"

[dependencies.windows]
version = "0.58.0"
features = [
	"Win32_System_Com",
	"Win32_Media",
	"Win32_Media_Audio",
	"Win32_UI_Shell_PropertiesSystem",
	"Win32_Devices",
	"Win32_Devices_FunctionDiscovery",
]